--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.0.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -45,6 +46,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/sharp": "^0.28.0",
     "autoprefixer": "^9",
     "postcss": "^7",
