--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "@react-hook/hover": "^4.0.0",
     "@react-hook/mouse-position": "^4.1.0",
     "@react-hook/window-size": "^3.0.7",
