--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-p5": "^1.3.19",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "use-persisted-state": "^0.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -53,6 +55,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-lazy-load-image-component": "^1.5.1",
     "@types/sharp": "^0.28.0",
+    "@types/use-persisted-state": "^0.3.0",
     "autoprefixer": "^9",
     "postcss": "^7",
     "sharp": "^0.28.1",
