--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-lazy-load-image-component": "^1.5.1",
     "react-p5": "^1.3.19",
     "react-scripts": "4.0.3",
+    "react-use-dimensions": "^1.2.1",
     "typescript": "^4.1.2",
     "use-persisted-state": "^0.3.3",
     "web-vitals": "^1.0.1"
