--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.0.0",
-    "@heroicons/react": "^1.0.1",
     "@react-hook/hover": "^4.0.0",
     "@react-hook/mouse-position": "^4.1.0",
     "@react-hook/window-size": "^3.0.7",
@@ -15,6 +14,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-p5": "^1.3.19",
