--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-multi-select-component": "^4.0.1",
     "react-p5": "^1.3.19",
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
@@ -24,7 +25,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "DISABLE_ESLINT_PLUGIN=true craco start",
     "build": "craco build",
     "test": "craco test",
     "lint": "eslint ."
