--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
-    "react-lazy-load-image-component": "^1.5.1",
+    "react-lazyload": "^3.2.0",
     "react-multi-select-component": "^4.0.1",
     "react-p5": "^1.3.19",
     "react-scripts": "4.0.3",
@@ -54,7 +54,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-lazy-load-image-component": "^1.5.1",
+    "@types/react-lazyload": "^3.1.0",
     "@types/sharp": "^0.28.0",
     "@types/use-persisted-state": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
