--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@testing-library/user-event": "^12.1.10",
     "array-shuffle": "^2.0.0",
     "axios": "^0.21.1",
+    "lucide-react": "^0.15.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazyload": "^3.2.0",
     "react-multi-select-component": "^4.0.1",
