--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-p5": "^1.3.19",
     "react-scripts": "4.0.3",
     "react-use-dimensions": "^1.2.1",
+    "tailwind-override": "^0.0.10",
     "typescript": "^4.1.2",
     "use-persisted-state": "^0.3.3",
     "web-vitals": "^1.0.1"
