Add ownership filters
- Add web3 connection via web3-react
- Add filters on ownership (user, nft20, nftx v1 + v2)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "array-shuffle": "^2.0.0",
     "axios": "^0.21.1",
+    "ethers": "^5.4.1",
     "lucide-react": "^0.15.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
