Add BokkyPooBah's list of experimental categories
- Add a mapping from Bokky's object keys to trait names
- Add "experimental traits" to attributes-index + script
- Add tooltip explaining experimental traits

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "ethers": "^5.4.1",
     "lucide-react": "^0.15.23",
+    "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.0.0",
@@ -56,6 +57,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/rc-tooltip": "^3.7.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-lazyload": "^3.1.0",
