--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-multi-select-component": "^4.0.1",
     "react-p5": "^1.3.19",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "react-use-dimensions": "^1.2.1",
     "tailwind-override": "^0.0.10",
     "typescript": "^4.1.2",
