--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "array-shuffle": "^2.0.0",
     "axios": "^0.21.1",
     "ethers": "^5.4.1",
+    "history": "^5.1.0",
     "lucide-react": "^0.15.23",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-lazyload": "^3.2.0",
     "react-multi-select-component": "^4.0.1",
     "react-p5": "^1.3.19",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "react-use-dimensions": "^1.2.1",
