--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.0.0",
+    "@rarible/ethereum-api-client": "^0.1.13",
+    "@rarible/ethers-ethereum": "^0.9.9",
+    "@rarible/protocol-ethereum-sdk": "^0.9.10",
     "@react-hook/window-size": "^3.0.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +16,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "array-shuffle": "^2.0.0",
     "axios": "^0.21.1",
+    "eth-sig-util": "^3.0.1",
     "ethers": "^5.4.1",
     "history": "^5.1.0",
     "lucide-react": "^0.15.23",
@@ -28,7 +32,7 @@
     "react-toastify": "^7.0.4",
     "react-use-dimensions": "^1.2.1",
     "tailwind-override": "^0.0.10",
-    "typescript": "^4.1.2",
+    "typescript": "^4.4.4",
     "use-persisted-state": "^0.3.3",
     "web-vitals": "^1.0.1"
   },
@@ -57,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@rarible/types": "^0.5.0",
     "@tailwindcss/postcss7-compat": "^2.0.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
