--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.15.23",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.0.0",
     "react-lazyload": "^3.2.0",
